@@ -4,15 +4,14 @@ import java.io.BufferedInputStream;
 import java.io.BufferedOutputStream;
 import java.io.File;
 import java.io.FileInputStream;
-import java.io.FileNotFoundException;
 import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
+import java.io.OutputStream;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
 import java.util.Base64;
 
-import javax.xml.XMLConstants;
 import javax.xml.bind.DatatypeConverter;
 import javax.xml.stream.XMLEventReader;
 import javax.xml.stream.XMLInputFactory;
@@ -27,14 +26,11 @@ import org.apache.xml.security.stax.impl.transformer.canonicalizer.Canonicalizer
 public class FastHashCannon {
 
 	private static String input = null;
-	private static FileOutputStream fileOutputStream = null;
 	private static String outputFile = null;
 	private static CanonicalizerBase canonicalizerBase = null;
 	private static XMLEventReader xmlSecEventReader = null;
-	private static BufferedOutputStream bos = null;
-	private static InputStream inputStream = null;
 
-	public static void main(String[] args) throws Exception {
+	public static void main(String[] args) {
 
 		long start = System.currentTimeMillis();
 		System.out.println("Start ");
@@ -52,29 +48,41 @@ public class FastHashCannon {
 		// Initialize org.apache.xml.security.Init
 		org.apache.xml.security.Init.init();
 
-		// Prepare File to be read
-		prepareToReadFile();
+		File initialFile = new File(input);
 
-		// Prepare OutputFile
-		getOutputFile();
+		try (
+				FileInputStream inputStream = new FileInputStream(initialFile);
+				FileOutputStream fileOutputStream = new FileOutputStream(new File(outputFile));
+				BufferedOutputStream bos = new BufferedOutputStream(fileOutputStream);) {
 
-		// Get CanonicalizerBase
-		getCanonicalizer();
+			// Get CanonicalizerBase
+			getCanonicalizer(bos);
 
-		// Get XMLEventReader prepare to Canonicalize File
-		prepareToCanonicalizeFile();
+			// Get XMLEventReader prepare to Canonicalize File
+			prepareToCanonicalizeFile(inputStream);
 
-		System.out.println("Start Canonicalization of " + input);
+			System.out.println("Start Canonicalization of " + input);
 
-		canonicalizeFile();
+			canonicalizeFile();
 
-		System.out.println("Canonicalization Done in: " + calculateDuration(start) + " seconds");
+			System.out.println("Canonicalization Done in: " + calculateDuration(start) + " seconds");
 
-		// Calculate File Hash
-		byte[] sha256Digest = calculateSh256Digest(outputFile);
-		System.out.println("Cannonical File Hash -> " + new String(Base64.getEncoder().encode(sha256Digest)));
-		System.out.println("Cannonical File Hash -> " + DatatypeConverter.printHexBinary(sha256Digest));
-		System.out.println("Total time: " + calculateDuration(start) + " seconds");
+		} catch (Exception e) {
+			e.printStackTrace();
+			System.exit(1);
+		}
+
+		try (BufferedInputStream outStream = new BufferedInputStream(new FileInputStream(new File(outputFile)));) {
+
+			// Calculate File Hash
+			byte[] sha256Digest = calculateSh256Digest(outStream);
+			System.out.println("Cannonical File Hash -> " + new String(Base64.getEncoder().encode(sha256Digest)));
+			System.out.println("Cannonical File Hash -> " + DatatypeConverter.printHexBinary(sha256Digest));
+			System.out.println("Total time: " + calculateDuration(start) + " seconds");
+		} catch (Exception e) {
+			e.printStackTrace();
+			System.exit(1);
+		}
 
 	}
 
@@ -86,28 +94,18 @@ public class FastHashCannon {
 		System.out.println("usage: java pt.cryptosaft.demo.FastHashCannon <input xml file>");
 	}
 
-	private static byte[] calculateSh256Digest(String inputFile) throws NoSuchAlgorithmException, IOException {
+	private static byte[] calculateSh256Digest(InputStream inStream) throws NoSuchAlgorithmException, IOException {
 		int byteNumber = 4096;
 		MessageDigest sha256 = MessageDigest.getInstance("SHA-256");
 		sha256.reset();
-		BufferedInputStream outStream = new BufferedInputStream(new FileInputStream(new File(inputFile)));
+
 		int count;
-		byte[] read = new byte[byteNumber];	
-		try {
-			while ((count = outStream.read(read)) > 0) {
-				sha256.update(read, 0, count);
-			}
-		}
-		finally {
-			outStream.close();
+		byte[] read = new byte[byteNumber];
+		while ((count = inStream.read(read)) > 0) {
+			sha256.update(read, 0, count);
 		}
 		return sha256.digest();
 
-	}
-
-	private static void prepareToReadFile() throws FileNotFoundException {
-		File initialFile = new File(input);
-		inputStream = new FileInputStream(initialFile);
 	}
 
 	private static void canonicalizeFile() throws XMLStreamException, IOException {
@@ -115,20 +113,15 @@ public class FastHashCannon {
 			XMLSecEvent xmlSecEvent = (XMLSecEvent) xmlSecEventReader.nextEvent();
 			canonicalizerBase.transform(xmlSecEvent);
 		}
-		fileOutputStream.close();
+
 	}
 
-	private static void getCanonicalizer() throws XMLSecurityException {
+	private static void getCanonicalizer(OutputStream bos) throws XMLSecurityException {
 		canonicalizerBase = new Canonicalizer11_OmitCommentsTransformer();
 		canonicalizerBase.setOutputStream(bos);
 	}
 
-	private static void getOutputFile() throws FileNotFoundException {
-		fileOutputStream = new FileOutputStream(new File(outputFile));
-		bos = new BufferedOutputStream(fileOutputStream);
-	}
-
-	private static void prepareToCanonicalizeFile() throws Exception {
+	private static void prepareToCanonicalizeFile(InputStream inputStream) throws Exception {
 
 		XMLInputFactory xmlInputFactory = XMLInputFactory.newInstance();
 		xmlInputFactory.setEventAllocator(new XMLSecEventAllocator());
